--- a/public/event/example/index.html
+++ b/public/event/example/index.html
@@ -949,7 +949,7 @@
 
   
   <p class="powered-by copyright-license-text">
-    © 2022 通用人工智能实验班。本网站采用协议 <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
+    © 2022 清华大学学生网络服务队。本网站采用协议 <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>。京ICP备14018999号-9。
   </p>
   
 
